crates/ruff_python_parser/tests/snapshots/invalid_syntax@type_param_param_spec_bound.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/type_param_param_spec_bound.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..23,
        body: [
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(None),
                    range: 0..10,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 5..6,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 6..10,
                            node_index: NodeIndex(None),
                            type_params: [
                                ParamSpec(
                                    TypeParamParamSpec {
                                        node_index: NodeIndex(None),
                                        range: 7..10,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 9..10,
                                            node_index: NodeIndex(None),
                                            parameter_node_index: NodeIndex(None),
                                        },
                                        default: None,
                                    },
                                ),
                            ],
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 10..10,
                            id: Name(""),
                            ctx: Invalid,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 12..15,
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 12..15,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 19..22,
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 19..22,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | type X[**T: int] = int
  |           ^ Syntax Error: Expected `]`, found `:`
  |


  |
1 | type X[**T: int] = int
  |                ^ Syntax Error: Expected a statement
  |


  |
1 | type X[**T: int] = int
  |                  ^ Syntax Error: Expected a statement
  |
