crates/ruff_python_parser/tests/snapshots/invalid_syntax@type_param_param_spec_missing_default.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/type_param_param_spec_missing_default.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..44,
        body: [
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(None),
                    range: 0..19,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 5..6,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 6..13,
                            node_index: NodeIndex(None),
                            type_params: [
                                ParamSpec(
                                    TypeParamParamSpec {
                                        node_index: NodeIndex(None),
                                        range: 7..12,
                                        name: Identifier {
                                            id: Name("P"),
                                            range: 9..10,
                                            node_index: NodeIndex(None),
                                            parameter_node_index: NodeIndex(None),
                                        },
                                        default: None,
                                    },
                                ),
                            ],
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 16..19,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(None),
                    range: 20..43,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 25..26,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 26..37,
                            node_index: NodeIndex(None),
                            type_params: [
                                ParamSpec(
                                    TypeParamParamSpec {
                                        node_index: NodeIndex(None),
                                        range: 27..32,
                                        name: Identifier {
                                            id: Name("P"),
                                            range: 29..30,
                                            node_index: NodeIndex(None),
                                            parameter_node_index: NodeIndex(None),
                                        },
                                        default: None,
                                    },
                                ),
                                TypeVar(
                                    TypeParamTypeVar {
                                        node_index: NodeIndex(None),
                                        range: 34..36,
                                        name: Identifier {
                                            id: Name("T2"),
                                            range: 34..36,
                                            node_index: NodeIndex(None),
                                            parameter_node_index: NodeIndex(None),
                                        },
                                        bound: None,
                                        default: None,
                                    },
                                ),
                            ],
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 40..43,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | type X[**P =] = int
  |             ^ Syntax Error: Expected an expression
2 | type X[**P =, T2] = int
  |


  |
1 | type X[**P =] = int
2 | type X[**P =, T2] = int
  |             ^ Syntax Error: Expected an expression
  |
